tests/ui/parser/keyword-try-as-identifier-edition2018.rs
//@ edition: 2018

fn main() {
    let try = "foo"; //~ error: expected identifier, found reserved keyword `try`
}
